Added option to delete project
