# src/routes/projects/index.js
@@ -1,9 +1,10 @@
 const express = require('express');
 
+const requireAuthentication = require('../../middleware/requireAuthentication');
 const list = require('./list');
 const create = require('./create');
 const getProject = require('./getProject');
-const requireAuthentication = require('../../middleware/requireAuthentication');
+const deleteProject = require('./deleteProject');
 
 const router = express.Router();
 
@@ -11,5 +12,6 @@ router.use(requireAuthentication);
 router.post('/', create);
 router.get('/', list);
 router.get('/:projectId', getProject);
+router.delete('/:projectId', deleteProject);
 
 module.exports = router;
